--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,6 +1,9 @@
 ---
+// Imports
 import '../styles/components/hero.scss'
 ---
+
+<!-- Hero section -->
 <section class="hero">
     <h1>Adarsh Kumar</h1>
     <h2>Web Developer, Coder, Photographer, Musician</h2>
