--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -1,3 +1,4 @@
+// Navigation styles
 .nav {
     &[data-varient="sidebar"] {
         justify-content: center;
@@ -12,6 +13,7 @@
     gap: 1rem;
 }
 
+// Navigation buttons
 .nav-btn {
     // min-width: 100%;
     &:not(.primary) {
